# gnubg-nn-pypi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  danalyze.cc  meson.build  pyproject.toml  setup.py  tree_output.txt
.github/: FUNDING.yml  macos.yml  windows.yml
.github/actions/build-wheel/: action.yml
.github/workflows/: branch.yaml  build.yml  build_and_test.yml  build_test.yml  cibuildwheels.yml  lint.yml  meson-build.yml  publish.yml  release.yml  test.yml
docs/: api.rst  concepts.rst  conf.py  gnubg_manual.rst  index.rst  overview.rst  readme.rst  references.rst  requirements.txt  rules.rst  usage.rst
docs/_static/: gnubg.html  gnubg_manual_cleaned.rst
docs/manuals/: gnubg.info
gnubg-1.1.dist-info/: METADATA  RECORD
patches/: danalyze.cc  danalyze.cc.bak0
patches/gnubg-nn/: Makefile.am  configure.ac
patches/gnubg-nn/analyze/: Makefile.am  analyze.cc  bm.cc  bms.cc  danalyze.cc  dice_gen.cc  mec.cc  player.cc
patches/gnubg-nn/gnubg/: bearoffdb.c  eggmoveg.c  eggmoveg.c.bak  eval.c  inputs.c  inputs.h  osr.cc
patches/gnubg-nn/gnubg/lib/: neuralnet.c  nsse.c
patches/gnubg-nn/py/: stdutil.h
src/: __init__.py
src/_build_utils/: _version.py
src/gnubg/: __init__.py  gnubg.pyi  gnubgmodule.cpp  gnubgmodule.h  py3mod.cpp
src/gnubg/tests/: test.py  test_bindings.py
src/gnubgmodule/: .gitignore  __init__.py  gnubg.pyi  gnubgmodule.h
src/gnubgmodule/tests/: test.py
tests/: test.py  test_functional.py  test_unit.py  test_version.py
