[build-system]
requires = ["meson-python>=0.13.1"]
build-backend = "mesonpy"

[project]
name = "gnubg"
version = "1.1.0.dev4"
description = "Python3 bindings for GNUBG neural evaluation"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "David Reay", email = "dr323090@falmouth.ac.uk" }
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["backgammon", "AI", "gnubg", "games", "neural-networks"]
dependencies = []

[project.urls]
Homepage = "https://www.gnu.org/software/gnubg/"
Documentation = "http://www.gnubg.org/documentation/doku.php?id=gnu_backgammon_faq"
MailingList = "https://lists.gnu.org/mailman/listinfo/gnubg"
Source = "https://github.com/gnubg/gnubg-nn-pypi"
Contributing = "https://savannah.gnu.org/people/"
Credits = "https://git.savannah.gnu.org/cgit/gnubg.git/tree/credits.sh"
GNUBGProject = "https://git.savannah.gnu.org/cgit/gnubg/gnubg-nn.git"
